--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation 'io.github.cdimascio:java-dotenv:5.2.2'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
     implementation group: 'com.jagrosh', name: 'jda-utilities-commons', version: '3.0.5'
+    implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.2.1'
+    implementation group: 'org.quartz-scheduler', name: 'quartz-jobs', version: '2.2.1'
 }
 
 test {
