--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,12 @@ plugins {
     id 'org.springframework.boot' version '2.4.2'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'application'
 }
 
 group 'fr.axelallain'
-version '1.0-SNAPSHOT'
+version '1.0'
+mainClassName = 'Bot'
 
 repositories {
     mavenCentral()
